# de

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
.github/workflows/: format_check.yml  test_build.yml
benches/: benchmark.rs
docs/: Decisym_SPARQL_101.md  de101.md
scripts/: Dockerfile  download-rdf2hdt.sh  download-sample-bench.sh
src/: check.rs  create.rs  lib.rs  main.rs  query.rs  rdf2hdt.rs  rdf2nt.rs  serve.rs  service_description.rs  sparql.rs  view.rs
templates/: query.html
tests/: test-commands.rs  test-server.rs
tests/goldens/: superhero-query.csv
tests/resources/: all.rq  apple.hdt  apple.ttl  banana.nt  banana.ttl  hero-height.rq  pineapple.ttl  query-color.rq  query-fruit-color.rq
