[package]
name = "de"
version = "0.2.0"
authors = ["bharath181 <bharathselvaraj18@gmail.com>", "Greg Hanson <g.isaac.hanson@gmail.com>"]
edition = "2021"
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/DeciSym/de"
default-run = "de"
keywords = ["hdt", "rdf", "semantic-web", "triple-store", "sparql"]
categories = ["command-line-utilities"]

[[bin]]
name = "de"
path = "src/main.rs"
bench = false

[[bench]]
name = "benchmark"
harness = false

[dependencies]
anyhow = { version = "1.0", default-features = false }
clap = { version = "4.5" }
clap-verbosity-flag = { version = "3.0", default-features = false, features = ["log"] }
env_logger = { version = "0.11", default-features = false }
exitcode = "1.1"
hdt = { git = "https://github.com/DeciSym/hdt", default-features = false, features = ["nt", "sparql"], rev = "86847db45131e05ccd1d3c0305eda373a3f708a2" }
http = { version = "1.4", optional = true }
log = "0.4"
oxhttp = { version = "0.3", optional=true }
oxiri = { version = "0.2", optional = true }
oxrdf = "0.3"
oxrdfio = "0.2"
rand = { version = "0.9", optional = true }
rayon = "1.11.0"
sparesults = "0.3"
spareval = "0.2"
spargebra = "0.4"
tempfile = {version = "3.25"}
tokio = { version = "1.49", default-features = false, features = ["rt-multi-thread", "macros"] }
url = { version = "2.5", optional = true }

[dev-dependencies]
urlencoding = "2.1"

[target.'cfg(not(target_os = "openbsd"))'.dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
pprof = { version = "0.15", features = ["protobuf", "protobuf-codec", "criterion"] }

[package.metadata.deb]
maintainer = "DeciSym.AI <support@decisym.ai>"
copyright = "2023, DeciSym.AI."
extended-description = "CLI tool for creating and querying hdt files"
section = "utils"
priority = "optional"
assets = [
    # binary
    ["target/release/de", "usr/bin/", "755"], 

]
default-features = false

[features]
default = []
server = ["dep:oxhttp", "dep:http", "dep:url", "dep:rand", "dep:oxiri"]

[package.metadata.cargo-machete]
ignored = ["eyre"]
